# anemone

./: .gitignore  CHANGELOG.md  anemone.cabal  bslisp.cabal
app/: Main.hs  Options.hs
docs/: append-only-environments.md  default-environment.md  glossary.md  naming-conventions.md
editors/cloc/: README.md  anemone.txt
editors/sublime-text-3/: Anemone.sublime-syntax  Comments.tmPreferences  Indent Patterns.tmPreferences
examples/: bootstrap.anm
examples/bootstrap/: bootstrap.anm  stage0.anm
src/Data/: Zexpr.hs
src/Data/List/: Reverse.hs
src/Data/Zexpr/: Location.hs  Parser.hs  Sexpr.hs  Zexpr.hs
src/Data/Zexpr/Sexpr/Text/: Render.hs
src/Data/Zexpr/Text/: Parser.hs  Render.hs
src/Language/Anemone/: Keywords.hs
src/Language/Anemone/TreeWalk/: Environment.hs  Eval.hs  Machine.hs  Stack.hs  Type.hs  Value.hs
src/Language/Anemone/TreeWalk/Environment/: Default.hs
src/Language/Anemone/TreeWalk/Unsafe/: Types.hs
src/Language/Bslisp/: Keywords.hs
src/Language/Bslisp/TreeWalk/: Environment.hs  Eval.hs  Machine.hs  Stack.hs  Type.hs  Value.hs
src/Language/Bslisp/TreeWalk/Unsafe/: Types.hs
