cabal-version: 3.0
name: bslisp
version: 0.0.1.0
-- synopsis: 
-- description:
category: Language
homepage: https://github.com/Okuno Zankoku/bslisp
bug-reports: https://github.com/Okuno Zankoku/bslisp/issues
author: Okuno Zankoku
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Okuno Zankoku
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.Zexpr
    Data.Zexpr.Location
    Data.Zexpr.Sexpr
    Data.Zexpr.Text.Parser
    Data.Zexpr.Text.Render
    Data.Zexpr.Zexpr
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , bytestring >=0.11
    , megaparsec >=0.9
    , mtl >=2.2
    , symbol >=0.2
    , text >=1.2
  default-language: Haskell2010
  -- ghc-options: -O2 -Wall -Wunticked-promoted-constructors
  -- DEBUG
  ghc-options: -Wall -Wunticked-promoted-constructors

executable bslisp
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , bslisp
    , text
  default-language: Haskell2010
  -- ghc-options: -O2 -Wall -Wunticked-promoted-constructors -threaded
  -- DEBUG
  ghc-options: -Wall -Wunticked-promoted-constructors -threaded

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , bslisp
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , bslisp
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2
