cabal-version: 3.0
name: anemone
version: 0.0.1.0
-- synopsis: 
-- description:
category: Language
homepage: https://github.com/Okuno Zankoku/anemone
bug-reports: https://github.com/Okuno Zankoku/anemone/issues
author: Okuno Zankoku
maintainer: zankoku.okuno@gmail.com
copyright: 2021 Okuno Zankoku
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Data.List.Reverse
    Data.Zexpr
    Data.Zexpr.Location
    Data.Zexpr.Sexpr
    Data.Zexpr.Sexpr.Text.Render
    Data.Zexpr.Text.Parser
    Data.Zexpr.Text.Render
    Data.Zexpr.Zexpr
    Language.Anemone.Keywords
    Language.Anemone.TreeWalk.Environment
    Language.Anemone.TreeWalk.Eval
    Language.Anemone.TreeWalk.Machine
    Language.Anemone.TreeWalk.Stack
    Language.Anemone.TreeWalk.Type
    Language.Anemone.TreeWalk.Unsafe.Types
    Language.Anemone.TreeWalk.Value
  -- other-modules:
  build-depends:
    , base >=4.11.1
    , bytestring >=0.11
    , containers >=0.6
    , deepseq >=1.4
    , megaparsec >=0.9
    , mtl >=2.2
    , natural-arithmetic >=0.1.2
    , prettyprinter >=1.7
    , strict-io >=0.2
    , symbol >=0.2
    , text >=1.2
    , transformers >=0.5
  default-language: Haskell2010
  -- ghc-options: -O2 -Wall -Wunticked-promoted-constructors
  -- DEBUG
  ghc-options: -Wall -Wunticked-promoted-constructors

executable anemone
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , anemone
    , pretty-simple >=4.0
    , prettyprinter
    , symbol
    , text
  default-language: Haskell2010
  -- ghc-options: -O2 -Wall -Wunticked-promoted-constructors -threaded
  -- DEBUG
  ghc-options: -Wall -Wunticked-promoted-constructors -threaded

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , anemone
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , anemone
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2
